Script/Production/gateway-service.yml
apiVersion: apps/v1
kind: Deployment 
metadata: 
  name: gateway-service
spec: 
  selector: 
    matchLabels: 
      app: gateway-service
  replicas: 1
  template:
    metadata: 
        labels: 
            app: gateway-service
    spec: 
      containers: 
      - name: gateway-service
        image: unict/gateway-service:1.0.0
        ports: 
        - containerPort: 8088
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
spec:
  selector:
    app: gateway-service
  ports:
    - protocol: TCP
      port: 8088
      targetPort: 8088
