Script/Production/kafka.yml
apiVersion: apps/v1
kind: Deployment 
metadata: 
  name: zoo
spec: 
  selector: 
    matchLabels: 
      app: zoo
  replicas: 1
  template:
    metadata: 
        labels: 
            app: zoo
    spec: 
      containers: 
      - name: zoo
        image: zookeeper
        ports: 
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: zoo
spec:
  selector:
    app: zoo
  ports:
    - protocol: TCP
      port: 2181
      targetPort: 2181
---
apiVersion: apps/v1
kind: Deployment 
metadata: 
  name: kafka
spec: 
  selector: 
    matchLabels: 
      app: kafka
  replicas: 1
  template:
    metadata: 
      labels: 
        app: kafka
    spec: 
      containers: 
      - name: kafka
        image: wurstmeister/kafka:2.11-2.0.0
        ports: 
        - containerPort: 9092
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-service
spec:
  type: ClusterIP
  selector:
    app: kafka
  ports:
    - protocol: TCP
      port: 9092
      targetPort: 9092
