Script/Production/lra-coordinator.yml
apiVersion: apps/v1
kind: Deployment 
metadata: 
  name: lra-coordinator
spec: 
  selector: 
    matchLabels: 
      app: lra-coordinator
  replicas: 1
  template:
    metadata: 
        labels: 
            app: lra-coordinator
    spec: 
      containers: 
      - name: lra-coordinator
        image: lra-coordinator:1.0
        ports: 
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: lra-coordinator-service
spec:
  selector:
    app: lra-coordinator-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
