Script/Production/gateway-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: gateway-service
    servicePort: 8088
  rules:
  - host: gateway-ingress
    http:
      paths:
      - path: /api/v1/saga
        backend:
          serviceName: sagaorchestration-service
          servicePort: 8081
      - path: /api/v1/auction
        backend:
          serviceName: auctionmanager-service
          servicePort: 8083
      - path: /api/v1/wallet
        backend:
          serviceName: walletmanager-service
          servicePort: 8084
